[package]
name = "libffm"
version = "0.1.0"
description = "Field-aware factorization machines in Rust"
repository = "https://github.com/ankane/libffm-rust"
license = "BSD-3-Clause"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
readme = "README.md"

[lib]
doctest = false

[dependencies]
byteorder = "1"
clap = { version = "4", features = ["derive"], optional = true }
rand = "0.8"

[features]
cli = ["clap"]

[[bin]]
name = "ffm-train"
required-features = ["cli"]
test = false

[[bin]]
name = "ffm-predict"
required-features = ["cli"]
test = false
